Fixed Z-index on content vs grid

--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,12 @@ label.section-header{font-size:20px;}
 .dragger{width: fit-content; cursor: pointer;}
 
 #banner{width:200px; height:200px; background-color:red;}
-
+/******Banner*****/
 .grid{
     background-image: repeating-linear-gradient(0deg,transparent,transparent 70px,#CCC 70px,#CCC 71px),repeating-linear-gradient(-90deg,transparent,transparent 70px,#CCC 70px,#CCC 71px);
     background-size: 71px 71px;
-    width:100%;
-    height:100%;
+    width:inherit;
+    height:inherit;
+    position: absolute;
 }
-
+.dragger{position: absolute !important; z-index: 10;}
